tests/basic/post/assert/030.pan.out
tests/basic/post/assert/030.pan:4:1-4: error: cannot solve constraints of f30
tests/basic/post/assert/030.pan:7:1-4: error: cannot solve constraints of f31
tests/basic/post/assert/030.pan:10:1-4: error: cannot solve constraints of f32
tests/basic/post/assert/030.pan:13:1-4: error: cannot solve constraints of f33